修正URIUtil 清理代码